# adoptable-platform-repo

./: .env  README.md  diagram.md  docker-compose.yml  envVars.ps1  production_start.txt  start.bat  zap.yaml
.github/workflows/: ci copy.yml  ci.yml
adoptable_front/: .env  .eslintrc.js  .gitignore  README.md  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  webpack.config.js
adoptable_front/cypress/e2e/: ping_web.cy.js  ping_web.cy.ts
adoptable_front/cypress/e2e/autentication_tests/: login.cy.js  login.cy.ts  register.cy.js  register.cy.ts
adoptable_front/public/: site.webmanifest
adoptable_front/scripts/: vite-https.cjs
adoptable_front/src/: App.tsx  global.d.ts  i18n.ts  main.tsx
adoptable_front/src/components/: layout.tsx
adoptable_front/src/components/adoption_form/: adoption_form.tsx
adoptable_front/src/components/card/: card.tsx
adoptable_front/src/components/loader/: loader.tsx
adoptable_front/src/components/location/: location_header.tsx
adoptable_front/src/components/navbar/: footer.tsx  navbar_inferior.tsx  navbar_superior.tsx
adoptable_front/src/components/role_protected_routes/: role_protected_routes.tsx
adoptable_front/src/components/search_bar/: search_bar.tsx
adoptable_front/src/features/auth/: authService.ts  authSlice.ts
adoptable_front/src/features/auth/login/: login.tsx
adoptable_front/src/features/auth/register/: register.tsx
adoptable_front/src/features/auth/session/: checkSession.ts  token.ts
adoptable_front/src/locales/ca/: translation.json
adoptable_front/src/locales/de/: translation.json
adoptable_front/src/locales/en/: translation.json
adoptable_front/src/locales/es/: translation.json
adoptable_front/src/locales/fr/: translation.json
adoptable_front/src/pages/: dashboard.tsx
adoptable_front/src/pages/animal/: add_animal.tsx
adoptable_front/src/pages/boards/: admin_dashboard.tsx  protectora_dashboard.tsx
adoptable_front/src/pages/card_detail/: animal_services.ts  card_detail.tsx
adoptable_front/src/pages/contact/: contact.tsx  contact_detail.tsx  contact_services.tsx
adoptable_front/src/pages/donations/: donations.tsx  donations_services.tsx
adoptable_front/src/pages/error_pages/: forbidden.tsx  not_found.tsx
adoptable_front/src/pages/profile/: profile.tsx  user_services.tsx
adoptable_front/src/pages/protectora/: animal_requests.tsx
adoptable_front/src/pages/reset_password/: reset_password.tsx
adoptable_front/src/redux/: store.ts
adoptable_front/src/redux/slices/: authSlice.ts  location_slice.tsx  profileSlice.ts  userSlice.ts
adoptable_front/src/styles/global/: globalStyles.tsx
adoptable_front/src/theme/: theme.ts
backend/: .coverage  .coveragerc  .env  .flake8  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  format.bat  lint.bat  pyproject.toml  pytest.ini
backend/animals/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/animals/migrations/: 0001_initial.py  0002_animal_latitude_animal_longitude.py  0003_alter_animal_characteristics_and_more.py  0004_alter_animal_since.py  0005_remove_animal_shelter_animal_owner.py  0006_animal_adopter.py  0007_adoptionrequest.py  0008_alter_adoptionrequest_options_and_more.py  0009_adoptionrequest_form_data.py
backend/animals/tests/: test_animals_views.py
backend/app/: settings.py  storages.py  urls.py
backend/contact/: admin.py  models.py  serializers.py  urls.py  views.py
backend/contact/migrations/: 0001_initial.py
backend/contact/tests/: test_contact_views.py
backend/donacions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/donacions/migrations/: 0001_initial.py  0002_donacion_anonimo.py
backend/donacions/tests/: test_donations_views.py
backend/my_django_project/: urls.py  views.py
backend/secrets/: django_secret_key.txt  email_host_password.txt
backend/tests/: test_sample.py
backend/users/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_adopterprofile_avatar.py  0003_alter_adopterprofile_avatar.py  0004_adopterprofile_adoption_form.py  0005_protectoraapproval.py
backend/users/templates/: base_generic.html
backend/users/templates/users/: login.html  register.html
backend/users/tests/: conftest.py  test_login.py  test_logout.py  test_register.py  test_users_views.py
frontend/: .gitignore  README.md
frontend/adoptable_front/: index.html  package-lock.json  package.json
frontend/adoptable_front/src/: App.tsx  main.tsx
frontend/adoptable_front/src/features/auth/: authService.ts  (+2 more)
my_django_project/: pyproject.toml
my_django_project/backend/: settings.py
secrets/: django_secret_key.txt
(+4 files in other folders)
