[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Marclosk <marclosquino2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1.2"
pytest = "^7.0"
pytest-django = "^4.0"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
asgiref = "^3.3.1"
psycopg2 = "^2.8.6"
psycopg2-binary = "^2.8.6"
pytz = "^2020.4"
sqlparse = "^0.4.1"
pillow = "^11.0.0"
gunicorn = "^20.1.0"
boto3 = "^1.37.3"
django-storages = "^1.14.5"
geopy = "^2.4.1"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
exclude = [
  ".venv",
  "__pycache__",
  "migrations",
  "env",
  "venv",
  "static",
  "media",
  "node_modules"
]
extend-ignore = [
  "E203",  
  "W503"   
]
select = [
  "E",     
  "F",    
  "W",     
  "C90"    
]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["tu_app_principal", "otra_app"]  
default_section = "THIRDPARTY"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
skip = [
  "migrations",
  ".venv",
  "venv",
  "__pycache__"
]

