[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Marclosk <marclosquino2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1.2"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
asgiref = "^3.3.1"
psycopg2 = "^2.8.6"
psycopg2-binary = "^2.8.6"
pytz = "^2020.4"
sqlparse = "^0.4.1"
pillow = "^11.0.0"
gunicorn = "^20.1.0"
boto3 = "^1.37.3"
django-storages = "^1.14.5"
geopy = "^2.4.1"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
flake8         = "^6.0.0"
black          = "^24.0.0"
isort          = "^5.12.0"
pytest         = "^7.0"
pytest-django  = "^4.0"
coverage       = "^7.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ----------------------------
# Flake8
[tool.flake8]
max-line-length = 120
exclude = [
  ".venv",
  "__pycache__",
  "migrations",
  "env",
  "venv",
  "static",
  "media",
  "node_modules",
]
extend-ignore = ["E203", "W503"]
select = ["E", "F", "W", "C90"]

# ----------------------------
# isort (perfil Black + tus apps como FIRSTPARTY)
[tool.isort]
profile = "black"
line_length = 120
known_django = ["django"]
known_first_party = ["users", "animals", "contact", "otra_app"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["migrations", ".venv", "venv", "__pycache__"]

# ----------------------------
# Black (¡importante!: aquí la clave correcta es `line-length`)
[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | env
  | venv
  | build
  | dist
  | migrations
  | __pycache__
)/
'''
